# alice

./: .prettierrc  README.md  flake.nix  package-lock.json  package.json  shell.nix  tailwind.config.ts  tsconfig.json  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: calls.rs  chat.rs  commands.rs  config.rs  conversation.rs  events.rs  main.rs  manager.rs  prelude.rs  prompt.rs  responses.rs  sockets.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/abstractions/: mod.rs  sockets.rs
src-tauri/src/api/ullm/: mod.rs  models.rs
src-tauri/src/commands/: connection.rs  conversation.rs  models.rs
src-tauri/src/models/: character.rs  chat.rs  history.rs  history2.rs  message.rs  mod.rs  model.rs  parameters.rs  prompt.rs
src-tauri/src/wpp/: chat.rs  format.rs  header.rs  item.rs  mod.rs  parser.rs  prompting.rs  tokenizer.rs
src/components/: ConnectionIndicator.svelte  Logo.svelte  ModelSelector.svelte  NavButton.svelte  NewChat.svelte  Sidebar.svelte
src/lib/: code.ts  conversation.ts  index.ts  markdown.ts  models.ts  placeholder.ts
src/lib/input/: Button.svelte
src/parts/: Chat.svelte  Controls.svelte  Input.svelte  Nav.svelte
src/routes/: +layout.svelte  +page.svelte  +page.ts
