[package]
name = "alice"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.9.1", features = ["v4", "serde"] }
url = "2.5.2"
async-trait = "0.1.80"
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
